--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "mikey179/vfsstream": "^1.6",
     "php-coveralls/php-coveralls": "^2.1",
     "rector/rector": "^1.0",
-    "friendsofphp/php-cs-fixer": "^3.56"
+    "friendsofphp/php-cs-fixer": "^3.56",
+    "phpstan/phpstan": "^1.10"
   }
 }
