--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": "^8.2",
         "ext-json": "*",
+        "justinrainbow/json-schema": "^5.2",
         "typo3fluid/fluid": "^2.12"
     },
     "config": {
