[TASK] Introduce value objects, make phpstan happy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,5 +38,8 @@ jobs:
       - name: CGL check
         run: vendor/bin/php-cs-fixer fix --dry-run --diff -v
 
+      - name: Phpstan
+        run: vendor/bin/phpstan analyze --no-progress
+
       - name: Phpunit
         run: vendor/bin/phpunit
