[TASK] Add test for documentation generator

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
             "T3Docs\\FluidDocumentationGenerator\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "T3Docs\\FluidDocumentationGenerator\\Tests\\": "tests/"
+        }
+    },
     "bin": [
         "bin/fluidDocumentation"
     ]
