--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.2', '8.3']
+        php: ['8.2', '8.3', '8.4']
 
     steps:
       - uses: actions/checkout@v4
@@ -34,10 +34,12 @@ jobs:
         run: composer update
 
       - name: CGL check
+        if: ${{ matrix.php <= '8.3' }}
         run: vendor/bin/php-cs-fixer fix --dry-run --diff -v
 
       - name: Phpstan
+        if: ${{ matrix.php <= '8.3' }}
         run: vendor/bin/phpstan analyze --no-progress
 
-      # - name: Phpunit
-      #   run: vendor/bin/phpunit
+      - name: Phpunit
+        run: vendor/bin/phpunit
